--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <div class="inner">
         <div class="left">
           <h1>안녕하세요<br><span>황지혜</span>입니다.</h1>
-          <div class="img"></div><!-- img -->
+          <div class="img">
+            <img src="img/img.jpg" alt="사진">
+          </div><!-- img -->
           <ul class="info">
             <li>
               <img src="img/brith.png" alt="생일">
